# repo_fetcher

./: .gitignore  Cargo.toml  README.md  keywords.txt
inst/analysis/: requests.Rmd
inst/scripts/: make_repo_urls.R
src/: main.rs  repositories.rs  users.rs
