[package]
name = "repo_fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.9"
octocrab = { version = "0.20.0", features = ["retry"] }
tokio = { version = "1.27.0", features = ["full"] }
anyhow = "1.0"
indicatif = "0.17.3"
log = "0.4.17"
csv-async = { version = "1.2.6", features = ["tokio", "with_serde"] }
serde_derive = "1.0.160"
serde = { version = "1.0.160", features = ["serde_derive"] }
env_logger = "0.10.0"
rand = "0.8.5"
clap = { version = "4.2.7", features = ["derive"] }
